--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -45,7 +45,7 @@ $theme-colors: (
 // Define custom colors for the navbar-links end
 
 // Body
-$body-bg: $white !default;
+$body-bg: #f9fafb !default;
 $body-color: black !default;
 
 // navlink-active
