--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,5 +61,5 @@
 
 // dark mode
 .sidebar, .topbar, .drk {
-  background-color: $body-bg;
+  background-color: white;
 }
